--- a/ProjecIntegration.Api/Blazor.UI/Client/Page/MakeCommand/GetCommand.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Client/Page/MakeCommand/GetCommand.razor
@@ -23,7 +23,7 @@
 
         if (selectRepresnetaion != null)
         {
-            <div class="col border border-end text-center">
+            <div class=" border border-end text-center">
                 <div class="m-4 p-4">
                     <h5 class="">@PIecerep.Titre</h5>
                 </div>
