--- a/ProjecIntegration.Api/Blazor.UI/Client/Page/Representation.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Client/Page/Representation.razor
@@ -85,7 +85,7 @@
 }
 else
 {
-<Blazor.UI.Client.Shared.Load></Blazor.UI.Client.Shared.Load>    
+<Blazor.UI.Client.Shared.Load loadParam="il est possible qu'aucune seance ne soit prévue"></Blazor.UI.Client.Shared.Load>    
 }
 @code {
     [Parameter]
