--- a/ProjecIntegration.Api/Blazor.UI/Client/Shared/Load.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Client/Shared/Load.razor
@@ -7,7 +7,7 @@
         }
         else
         {
-            <h3>Load : @loadParam</h3>
+            <h3>@loadParam</h3>
         }
         <h4>Page en cours de chargement veuillez patienter </h4>
         <div class="spinner-border shadow-sm" role="status">
