--- a/ProjecIntegration.Api/Blazor.UI/Layout/NavMenu.razor
+++ b/ProjecIntegration.Api/Blazor.UI/Layout/NavMenu.razor
@@ -26,7 +26,7 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="modulereservation">
-                <i class="bi bi-basket" aria-hidden="true"></i> Reservation
+                <i class="bi bi-basket" aria-hidden="true"></i> test Reservation
             </NavLink>
         </div>
         <div class="nav-item px-3">
